# auto-overtime

./: .env.example  .gitignore  CLAUDE.md  README.md  poc_test.py  pyproject.toml  requirements-dev.txt  requirements-poc.txt  requirements.txt  run.sh
.github/workflows/: build.yml
doc/: plan.md  plan01.md  request.md
poc_results/: test_result_20260131_120118.json  test_result_20260131_120801.json  test_result_20260131_121658.json  test_result_20260131_122953.json  test_result_20260131_123613.json  test_result_20260131_130032.json  test_result_20260131_130257.json  test_result_20260131_130447.json  test_result_20260131_130658.json  test_result_20260131_131710.json  test_result_20260131_235725.json
src/: config.py  main.py
src/ai_extraction/: prompt_templates.py  vision_client.py
src/assets/: .gitkeep
src/data_handling/: json_handler.py
src/image_processing/: encoder.py
src/models/: overtime.py
src/ui/: __init__.py  app.py  editable_table.py  file_upload.py  image_gallery.py  progress_indicator.py  theme.py
