[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-overtime"
version = "0.1.0"
description = "AI-powered handwritten overtime form recognition system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flet==0.28.2",
    "openai>=2.11.0",
    "pandas>=2.0.3",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# 與 Black 相同的行長度(保持專案原有的 100)
line-length = 100

# Python 3.13 語法支援
target-version = "py313"

[tool.ruff.lint]
# 啟用推薦的規則集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 忽略特定規則(根據需要調整)
ignore = [
    "E501",  # line too long (讓 formatter 處理)
]

[tool.ruff.format]
# 使用雙引號
quote-style = "double"

# 縮排使用空格
indent-style = "space"

# 與 Black 相容
line-ending = "auto"
